--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@craco/craco": "^6.4.2",
         "@testing-library/jest-dom": "^5.15.1",
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
@@ -12,9 +13,9 @@
         "web-vitals": "^1.1.2"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -36,15 +37,15 @@
         ]
     },
     "devDependencies": {
-        "autoprefixer": "^10.4.0",
+        "autoprefixer": "^9.8.8",
         "eslint-config-airbnb": "^19.0.1",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.25.3",
         "eslint-plugin-jsx-a11y": "^6.5.1",
         "eslint-plugin-react": "^7.27.1",
         "eslint-plugin-react-hooks": "^4.3.0",
-        "postcss": "^8.4.4",
+        "postcss": "^7.0.39",
         "prettier": "2.5.0",
-        "tailwindcss": "^2.2.19"
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
     }
 }
